API: add GitHub pull request schema
